fixes scroll, header, outline, .fc-today, prevents click and drag event creations when logged out, overall UI improvements

--- a/src/calendar.html
+++ b/src/calendar.html
@@ -29,7 +29,9 @@
 
       <!-- Center: Title -->
       <div class="header-center">
-          <h1 class="logo">Study Buddy</h1>
+          <a href="./index" class="logo-link">
+            <h1 class="logo">Study Buddy</h1>
+          </a>
       </div>
 
       <!-- Right: Google Sign-In/Out -->
