adds all day option on calendar sidebar

--- a/src/calendar.html
+++ b/src/calendar.html
@@ -135,6 +135,11 @@
         required
       />
 
+      <div>
+        <label>
+          <input type="checkbox" id="all-day-event-checkbox" /> All Day Event
+        </label>
+      </div>
 
       <!-- End Date and Time -->
       <label for="event-end-date">End Date:</label>
