--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,13 @@
     <title>Study Buddy</title>
 </head>
 <body>
-    
+    <!-- header -->
     <header>
         <h1>
             Study Buddy
         </h1>
     </header>
-
+    <!-- Directory Buttons -->
     <div>
         <a href="calendar.html" class="nav-button" id="calendar-button">
             Calendar
@@ -24,18 +24,31 @@
             Practice
         </a>
     </div>
+    <!--main elements -->
+    <!-- todolist -->
     <div class = "todo-list">
         <h1>To-do List</h1>
         <p>yayayayaqyayayayayayayayay</p>
+        <button class = "todo-list-edit">
+            Edit
+        </button>
     </div>
+     <!-- todolist end-->
+    <!-- timer -->
     <div class = "timer">
         <p>yep</p>
     </div>
+      <!-- timer end -->
+    <!-- chatbot -->
     <div class = "chatbot">
         <p>yessir</p>
     </div>
+    <!-- chatbot end -->
+    <!-- gif -->
     <div class = "gif">
         <p>yessir</p>
     </div>
+    <!-- gif end -->
+    <script src="todolist.js"></script>
 </body>
 </html>
