fixes google reference error during client initializations

--- a/src/calendar.html
+++ b/src/calendar.html
@@ -231,7 +231,7 @@
     <button id="create-event-fab" class="fab">+</button>
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="https://apis.google.com/js/api.js"></script>
+    <script src="https://apis.google.com/js/api.js" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js"></script>
     <script src="calendarscripts.js"></script>
   </body>
