--- a/src/calendar.html
+++ b/src/calendar.html
@@ -230,6 +230,30 @@
 
     <button id="create-event-fab" class="fab">+</button>
 
+    <div id="tabs-container" class="tabs-container">
+      <!-- Drag Handle -->
+      <div id="tabs-handle" class="tabs-handle">☰</div>
+
+      <!-- Tabs -->
+      <div class="tab" id="lectures-tab">Lectures</div>
+      <div class="tab" id="tests-tab">Tests</div>
+    </div>
+
+    <!-- Panels -->
+    <div id="lectures-panel" class="tab-panel">
+      <button class="close-panel" onclick="closePanel('lectures-panel')">
+        ✖
+      </button>
+      <h3>Upcoming Lectures</h3>
+      <ul id="lectures-list"></ul>
+    </div>
+
+    <div id="tests-panel" class="tab-panel">
+      <button class="close-panel" onclick="closePanel('tests-panel')">✖</button>
+      <h3>Upcoming Tests</h3>
+      <ul id="tests-list"></ul>
+    </div>
+
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js"></script>
