--- a/src/calendar.html
+++ b/src/calendar.html
@@ -239,18 +239,23 @@
       <div class="tab" id="tests-tab">Tests</div>
     </div>
 
-    <!-- Panels -->
     <div id="lectures-panel" class="tab-panel">
-      <button class="close-panel" onclick="closePanel('lectures-panel')">
-        ✖
-      </button>
-      <h3>Upcoming Lectures</h3>
+      <div class="panel-header">
+        <h3>Upcoming Lectures</h3>
+        <button class="close-panel" onclick="closePanel('lectures-panel')">
+          ✖
+        </button>
+      </div>
       <ul id="lectures-list"></ul>
     </div>
 
     <div id="tests-panel" class="tab-panel">
-      <button class="close-panel" onclick="closePanel('tests-panel')">✖</button>
-      <h3>Upcoming Tests</h3>
+      <div class="panel-header">
+        <h3>Upcoming Tests</h3>
+        <button class="close-panel" onclick="closePanel('tests-panel')">
+          ✖
+        </button>
+      </div>
       <ul id="tests-list"></ul>
     </div>
 
