finished todo list

--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,22 @@
     <!-- todolist -->
     <div class = "todo-list">
         <h1>To-do List</h1>
-        <p>yayayayaqyayayayayayayayay</p>
-        <button class = "todo-list-edit">
-            Edit
-        </button>
+        <button class = "todo-remove-button">X</button><p id = "item1"></p>
+        <button class = "todo-remove-button">X</button><p id = "item2"></p>
+        <button class = "todo-remove-button">X</button><p id = "item3"></p>
+        <button class = "todo-remove-button">X</button><p id = "item4"></p>
+        <button class = "todo-remove-button">X</button><p id = "item5"></p>
+        <button class = "todo-remove-button">X</button><p id = "item6"></p>
+        <button class = "todo-remove-button">X</button><p id = "item7"></p>
+        <button class = "todo-remove-button">X</button><p id = "item8"></p>
+        <button class = "todo-remove-button">X</button><p id = "item9"></p>
+        <button class = "todo-remove-button">X</button><p id = "item10"></p>
+        <div class = "todo-add">
+            <input class = "todo-input-box" id = "todo-input" placeholder="Enter Task Here">
+            <button class = "todo-list-done">
+                Done
+            </button>
+        </div>
     </div>
      <!-- todolist end-->
     <!-- timer -->
