--- a/src/index.html
+++ b/src/index.html
@@ -28,16 +28,16 @@
     <!-- todolist -->
     <div class = "todo-list">
         <h1>To-do List</h1>
-        <button class = "todo-remove-button">X</button><p id = "item1"></p>
-        <button class = "todo-remove-button">X</button><p id = "item2"></p>
-        <button class = "todo-remove-button">X</button><p id = "item3"></p>
-        <button class = "todo-remove-button">X</button><p id = "item4"></p>
-        <button class = "todo-remove-button">X</button><p id = "item5"></p>
-        <button class = "todo-remove-button">X</button><p id = "item6"></p>
-        <button class = "todo-remove-button">X</button><p id = "item7"></p>
-        <button class = "todo-remove-button">X</button><p id = "item8"></p>
-        <button class = "todo-remove-button">X</button><p id = "item9"></p>
-        <button class = "todo-remove-button">X</button><p id = "item10"></p>
+        <button class = "todo-remove-button" id = "remove1">X</button><p id = "item1"></p>
+        <button class = "todo-remove-button" id = "remove2">X</button><p id = "item2"></p>
+        <button class = "todo-remove-button" id = "remove3">X</button><p id = "item3"></p>
+        <button class = "todo-remove-button" id = "remove4">X</button><p id = "item4"></p>
+        <button class = "todo-remove-button" id = "remove5">X</button><p id = "item5"></p>
+        <button class = "todo-remove-button" id = "remove6">X</button><p id = "item6"></p>
+        <button class = "todo-remove-button" id = "remove7">X</button><p id = "item7"></p>
+        <button class = "todo-remove-button" id = "remove8">X</button><p id = "item8"></p>
+        <button class = "todo-remove-button" id = "remove9">X</button><p id = "item9"></p>
+        <button class = "todo-remove-button" id = "remove10">X</button><p id = "item10"></p>
         <div class = "todo-add">
             <input class = "todo-input-box" id = "todo-input" placeholder="Enter Task Here">
             <button class = "todo-list-done">
