--- a/src/calendar.html
+++ b/src/calendar.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
     <title>Document</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <header>
-        <a href="./index.html">
-            <h1>
-                Study Buddy
-            </h1>
-        </a>
+      <a href="./index.html">
+        <h1>Study Buddy</h1>
+      </a>
     </header>
-    
-</body>
+  </body>
 </html>
