finished AI Bot

--- a/src/index.html
+++ b/src/index.html
@@ -53,16 +53,18 @@
       <!-- timer end -->
     <!-- chatbot -->
     <div class = "chatbot">
+        <h1>AI Help</h1>
+        <div class = 'response-box'>
+            <p id = "response"></p>
+        </div>
         <div class = "chatbot-input">
-            <input class = "chatbot-input-box" id = "chatbot-input" placeholder="Enter Text Here">
+            <h2>Type a question in here and an AI will answer</h2>
+            <input class = "chatbot-input-box" id = "chatbot-input" placeholder="Enter Question Here">
             <button class = "chatbot-enter">
                 Enter
             </button>
         </div>
-        <div class = "reponse">
-            <div></div>
-            
-        </div>
+
     </div>
     <!-- chatbot end -->
     <!-- gif -->
