adds home button navigation in header

--- a/src/calendar.html
+++ b/src/calendar.html
@@ -10,12 +10,14 @@
   <body>
     <header class="header">
       <div class="header-left">
+        <a href="index.html" class="home-icon" title="Home">
+          <img src="/img/homeIcon.png" alt="Home" />
+        </a>
         <div id="notification-container" style="position: relative">
           <button id="notification-bell" class="notification-bell">
             <img
               src="https://cdn-icons-png.flaticon.com/512/1827/1827392.png"
               alt="Bell Icon"
-              style="width: 24px; height: 24px"
             />
             <span
               id="notification-badge"
