--- a/src/calendar.html
+++ b/src/calendar.html
@@ -8,98 +8,103 @@
   </head>
 
   <body>
-    <header class="header">
-      <div class="header-left">
-        <a href="index.html" class="home-icon" title="Home">
-          <img src="/img/homeIcon.png" alt="Home" />
-        </a>
-        <div id="notification-container" style="position: relative">
-          <button id="notification-bell" class="notification-bell">
-            <img
-              src="https://cdn-icons-png.flaticon.com/512/1827/1827392.png"
-              alt="Bell Icon"
-            />
-            <span
-              id="notification-badge"
-              class="notification-badge"
-              style="display: none"
-              >0</span
-            >
-          </button>
-          <div
-            id="notification-dropdown"
-            class="notification-dropdown"
-            style="display: none"
-          >
-            <ul id="notification-list" class="notification-list"></ul>
-            <button id="clear-notifications" class="clear-notifications">
-              Clear All
-            </button>
-          </div>
-        </div>
+    <!-- Header -->
+<header class="header">
+  <div class="header-left">
+    <!-- Menu -->
+    <div class="menu">
+      <a href="index.html">Home</a>
+      <a href="calendar.html">Calendar</a>
+      <a href="quizgen.html">Quiz</a>
+    </div>
+  </div>
+
+  <!-- Center: Title -->
+  <div class="header-center">
+    <h1 class="header-title">Study Buddy</h1>
+  </div>
+
+  <!-- Right: Notification Bell and Google Sign-In/Out -->
+  <div class="header-right">
+    <!-- Notification Bell -->
+    <div id="notification-container" style="position: relative; margin-right: 15px">
+      <button id="notification-bell" class="notification-bell">
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/1827/1827392.png"
+          alt="Bell Icon"
+        />
+        <span
+          id="notification-badge"
+          class="notification-badge"
+          style="display: none"
+          >0</span>
+      </button>
+      <div
+        id="notification-dropdown"
+        class="notification-dropdown"
+        style="display: none"
+      >
+        <ul id="notification-list" class="notification-list"></ul>
+        <button id="clear-notifications" class="clear-notifications">
+          Clear All
+        </button>
       </div>
+    </div>
 
-      <!-- Center: Title -->
-      <div class="header-center">
-        <a href="./index" class="logo-link">
-          <h1 class="logo">Study Buddy</h1>
-        </a>
-      </div>
+    <!-- Google Sign-In/Out -->
+    <div id="auth-controls" style="text-align: right">
+      <!-- Sign In Button -->
+      <button
+        id="sign-in-button"
+        class="google-button sign-in"
+        onclick="handleSignInClick()"
+        style="
+          display: block;
+          padding: 8px 16px;
+          font-size: 14px;
+          border-radius: 6px;
+        "
+      >
+        <img
+          src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg"
+          alt="Google Logo"
+          style="vertical-align: middle; margin-right: 8px"
+        />
+        Sign in with Google
+      </button>
 
-      <!-- Right: Google Sign-In/Out -->
-      <div class="header-right">
-        <div id="auth-controls" style="text-align: right">
-          <!-- Sign In Button -->
-          <button
-            id="sign-in-button"
-            class="google-button sign-in"
-            onclick="handleSignInClick()"
-            style="
-              display: block;
-              padding: 8px 16px;
-              font-size: 14px;
-              border-radius: 6px;
-            "
-          >
-            <img
-              src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg"
-              alt="Google Logo"
-              style="vertical-align: middle; margin-right: 8px"
-            />
-            Sign in with Google
-          </button>
+      <!-- User Name -->
+      <span
+        id="user-name"
+        style="
+          display: none;
+          font-weight: bold;
+          font-size: 14px;
+          color: #333;
+          margin-bottom: 5px;
+          display: block;
+        "
+      >
+      </span>
 
-          <!-- User Name (Appears after signing in) -->
-          <span
-            id="user-name"
-            style="
-              display: none;
-              font-weight: bold;
-              font-size: 14px;
-              color: #333;
-              margin-bottom: 5px;
-              display: block;
-            "
-          >
-          </span>
+      <!-- Sign Out Button -->
+      <button
+        id="sign-out-button"
+        class="google-button sign-out"
+        onclick="handleSignOutClick()"
+        style="
+          display: none;
+          padding: 8px 16px;
+          font-size: 14px;
+          border-radius: 6px;
+        "
+      >
+        Sign Out
+      </button>
+    </div>
+  </div>
+</header>
 
-          <!-- Sign Out Button (Appears after signing in) -->
-          <button
-            id="sign-out-button"
-            class="google-button sign-out"
-            onclick="handleSignOutClick()"
-            style="
-              display: none;
-              padding: 8px 16px;
-              font-size: 14px;
-              border-radius: 6px;
-            "
-          >
-            Sign Out
-          </button>
-        </div>
-      </div>
-    </header>
 
     <div id="calendar-container">
       <div id="calendar"></div>
