added quiz score history section to html file

--- a/src/quizgen.html
+++ b/src/quizgen.html
@@ -467,6 +467,16 @@
       </a>
     </section>
 
+    <section>
+      <h4>Quiz History</h4>
+      <div class="quiz-history">
+
+      </div>
+      <div class="clear-quiz-history-button">
+        <button>Clear History</button>
+      </div>
+    </section>
+
     <script type="module" src="quizscripts.js"></script>
   </body>
 </html>
