quiz history displays after quiz submitted

--- a/src/quizgen.html
+++ b/src/quizgen.html
@@ -468,10 +468,11 @@
     </section>
 
     <section>
-      <h4>Quiz History</h4>
-      <div class="quiz-history">
-
-      </div>
+        <table id="quiz-history">
+          <tr>
+            <th>Quiz History</th>
+          </tr>
+        </table>
       <div class="clear-quiz-history-button">
         <button>Clear History</button>
       </div>
