fixed error that sometimes occured when answers were being checked and add on click even for clear quiz history button

--- a/src/quizgen.html
+++ b/src/quizgen.html
@@ -468,14 +468,13 @@
     </section>
 
     <section>
+        
         <table id="quiz-history">
           <tr>
             <th>Quiz History</th>
           </tr>
         </table>
-      <div class="clear-quiz-history-button">
-        <button>Clear History</button>
-      </div>
+        <button class="clear-quiz-history-button">Clear History</button>
     </section>
 
     <script type="module" src="quizscripts.js"></script>
