added styling to quiz history table

--- a/src/quizgen.html
+++ b/src/quizgen.html
@@ -468,13 +468,13 @@
     </section>
 
     <section>
-        
-        <table id="quiz-history">
-          <tr>
-            <th>Quiz History</th>
-          </tr>
-        </table>
-        <button class="clear-quiz-history-button">Clear History</button>
+        <div class="quiz-history-position">
+          <table id="quiz-history">
+            
+              <th>Quiz History</th>
+          </table>
+          <button class="clear-quiz-history-button">Clear History</button>
+        </div>
     </section>
 
     <script type="module" src="quizscripts.js"></script>
