--- a/src/quizgen.html
+++ b/src/quizgen.html
@@ -9,10 +9,14 @@
   <body>
     <header>
       <a href="./index.html">
-        <div id="top-of-page"></div>
-        <h1>Study Buddy</h1>
+        <div id="top-of-page">
+          <h1>Study Buddy</h1>
+        </div>
+        
       </a>
     </header>
+
+    <h1 class="page-header">AI Quiz Generation</h1>
 
     <div class="options">
       <div class="quiz-option">
