added same header from calendar page to quiz gen page but only for the home page button

--- a/src/quizgen.html
+++ b/src/quizgen.html
@@ -7,13 +7,13 @@
     <title>Quiz Generation</title>
   </head>
   <body>
-    <header>
-      <a href="./index.html">
-        <div id="top-of-page">
-          <h1>Study Buddy</h1>
-        </div>
-        
-      </a>
+
+    <header class="header">
+      <div class="header-center">
+        <a href="./index.html" class="logo-link">
+          <h1 class="logo">Study Buddy</h1>
+        </a>
+      </div>
     </header>
 
     <h1 class="page-header">AI Quiz Generation</h1>
