--- a/src/calendar.html
+++ b/src/calendar.html
@@ -1,3 +1,8 @@
+<!-------------------------------------------->
+<!---------------   Calendar   --------------->
+<!-------------------------------------------->
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -148,30 +153,48 @@
     </div>
 
 
-    <script>
-      // Load the shared header and modal content
-      document.addEventListener("DOMContentLoaded", () => {
-        fetch("application.html")
-          .then(response => response.text())
-          .then(html => {
+    <script type="module" src="./User.js"></script>
+        <script>
+          document.addEventListener("DOMContentLoaded", () => {
+    fetch("application.html")
+        .then(response => response.text())
+        .then(html => {
             document.getElementById("shared-content").innerHTML = html;
-          })
-          .catch(err => console.error("Failed to load shared content:", err));
-      });
-    </script>
+        })
+        .catch(err => console.error("Failed to load shared content:", err));
+});
+        </script>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
+          // Load the shared header and initialize the user state
+          fetch("application.html")
+              .then(response => response.text())
+              .then(html => {
+                  document.getElementById("shared-content").innerHTML = html;
+  
+                  // Initialize user state
+                  User.initializeUser(); 
+              })
+              .catch(err => console.error("Failed to load shared content:", err));
+  
+          // Initialize GAPI and GIS clients without fetching user data
           User.initializeClients()
               .then(() => {
-                  console.log("Clients initialized on page load.");
+                  console.log("Clients initialized on page load, ready for user interaction.");
               })
-              .catch((error) => {
-                  console.error("Failed to initialize clients on page load:", error);
+              .catch(error => {
+                  console.error("Error initializing clients:", error);
               });
+  
+          // Attaching event listeners for buttons
+          const signInButton = document.getElementById("sign-in-button");
+          if (signInButton) {
+              signInButton.addEventListener("click", () => {
+                  User.handleSignInClick();
+              });
+          }
       });
   </script>
-  <!-- User.js -->
-    <script type="module" src="User.js"></script>
     <!-- calendar.html -->
 <script type="module" src="calendarscripts.js"></script>
 <!-- Google Sign-In and Calendar API -->
