--- a/src/calendar.html
+++ b/src/calendar.html
@@ -9,7 +9,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Study Buddy Calendar</title>
+    <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css" rel="stylesheet" />
+     <title>Study Buddy Calendar</title>
   </head>
 
   <body>
@@ -154,52 +155,29 @@
 
 
     <script type="module" src="./User.js"></script>
-        <script>
-          document.addEventListener("DOMContentLoaded", () => {
-    fetch("application.html")
-        .then(response => response.text())
-        .then(html => {
-            document.getElementById("shared-content").innerHTML = html;
-        })
-        .catch(err => console.error("Failed to load shared content:", err));
-});
-        </script>
+
     <script>
-      document.addEventListener("DOMContentLoaded", () => {
-          // Load the shared header and initialize the user state
-          fetch("application.html")
-              .then(response => response.text())
-              .then(html => {
-                  document.getElementById("shared-content").innerHTML = html;
-  
-                  // Initialize user state
-                  User.initializeUser(); 
-              })
-              .catch(err => console.error("Failed to load shared content:", err));
-  
-          // Initialize GAPI and GIS clients without fetching user data
-          User.initializeClients()
-              .then(() => {
-                  console.log("Clients initialized on page load, ready for user interaction.");
-              })
-              .catch(error => {
-                  console.error("Error initializing clients:", error);
-              });
-  
-          // Attaching event listeners for buttons
-          const signInButton = document.getElementById("sign-in-button");
-          if (signInButton) {
-              signInButton.addEventListener("click", () => {
-                  User.handleSignInClick();
-              });
-          }
-      });
+      document.addEventListener("DOMContentLoaded", async () => {
+    try {
+        // Fetch and load shared header
+        const response = await fetch("application.html");
+        const html = await response.text();
+        document.getElementById("shared-content").innerHTML = html;
+        await User.loadState();
+        // Initialize user state and update auth buttons
+        await User.initializeUser();
+    } catch (err) {
+        console.error("Error loading calendar page:", err);
+    }
+});
+
   </script>
     <!-- calendar.html -->
-<script type="module" src="calendarscripts.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
+<script type="module" src="./calendarscripts.js"></script>
+
 <!-- Google Sign-In and Calendar API -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js"></script>
-  </body>
+    </body>
 </html>
