--- a/src/quizgen.html
+++ b/src/quizgen.html
@@ -475,35 +475,17 @@
 });
         </script>
     <script>
-      document.addEventListener("DOMContentLoaded", () => {
-          // Load the shared header and initialize the user state
-          fetch("application.html")
-              .then(response => response.text())
-              .then(html => {
-                  document.getElementById("shared-content").innerHTML = html;
-  
-                  // Initialize user state
-                  User.initializeUser(); 
-              })
-              .catch(err => console.error("Failed to load shared content:", err));
-  
-          // Initialize GAPI and GIS clients without fetching user data
-          User.initializeClients()
-              .then(() => {
-                  console.log("Clients initialized on page load, ready for user interaction.");
-              })
-              .catch(error => {
-                  console.error("Error initializing clients:", error);
-              });
-  
-          // Attaching event listeners for buttons
-          const signInButton = document.getElementById("sign-in-button");
-          if (signInButton) {
-              signInButton.addEventListener("click", () => {
-                  User.handleSignInClick();
-              });
-          }
-      });
+           document.addEventListener("DOMContentLoaded", async () => {
+    try {
+        const response = await fetch("application.html");
+        const html = await response.text();
+        document.getElementById("shared-content").innerHTML = html;
+        await User.loadState();
+        await User.initializeUser(); // Wait until user state is fully initialized
+    } catch (err) {
+        console.error("Error initializing page:", err);
+    }
+});
   </script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>    
