--- a/src/quizgen.html
+++ b/src/quizgen.html
@@ -7,6 +7,7 @@
     <title>Quiz Generation</title>
   </head>
   <body>
+    <div id="top-of-page"></div>
     <header class="header">
       <div class="header-center">
         <a href="./index.html" class="logo-link">
