made it so that when not all questions have been answered, quiz cannot be submitted and an error message displays

--- a/src/quizgen.html
+++ b/src/quizgen.html
@@ -31,6 +31,9 @@
 
     <div class="error-msg-position">
       <div class="error-msg">Error: Please enter a topic</div>
+      <div class="error-msg" id="question-not-answered">
+        Error: Not all questions answered
+      </div>
     </div>
 
     <section class="quiz-section">
