added error message for when the quiz has already been submitted and changed submission button disabled logic

--- a/src/quizgen.html
+++ b/src/quizgen.html
@@ -34,6 +34,9 @@
       <div class="error-msg" id="question-not-answered">
         Error: Not all questions answered
       </div>
+      <div class="error-msg" id="quiz-already-submitted">
+        Error: Quiz already submitted. Please create a new one
+      </div>
     </div>
 
     <section class="quiz-section">
